fix: product card title overflow
Product card title overflows if the title is too long which brings x-axis scrollbar which is not expected

--- a/src/components/ProductList/ProductList.module.css
+++ b/src/components/ProductList/ProductList.module.css
@@ -22,6 +22,8 @@
   margin: 0 0 16px;
   white-space: nowrap;
   overflow-x: hidden;
+  text-overflow: ellipsis;
+  display: block;
 }
 
 .productBody {
@@ -60,7 +62,6 @@
 
 .productListItem {
   display: inline-block;
-  overflow-x: scroll;
   float: none;
   clear: both;
 }
